public/assets/css/style.css
/* ... */
.custom-range::-ms-track {
  background-color: #112768 !important;
  height: 3px !important;
}

.range-label {
  color: #112768 !important;
}

.input-group {
  margin-top: 10px;
  margin-bottom: 10px;
}

.input {
  background: #feffff 0% 0% no-repeat padding-box;
  border: 1px solid #c7c7c7;
  width: 100%;
  margin-bottom: 25px;
  height: 50px;
  border-radius: 50px;
  opacity: 1;
}

.interest-group {
  margin-top: 15px;
}

.btn-apply {
  background: #b6d133 0% 0% no-repeat padding-box !important;
  box-shadow: 2px 5px 10px #00000029 !important;
  border: none !important;
  border-radius: 50px !important;
  padding-left: 25px !important;
  padding-right: 25px !important;
  margin-top: 25px;
  opacity: 1;
}

.form-group {
  margin-top: 25px;
}
.form-label{
  margin-bottom: .5rem;
margin-top: 25px;
}


label {
  font: normal normal medium 21px/37px Montserrat;
  letter-spacing: 0px;
  color: #112768;
  opacity: 1;
}

.loan-text {
  font: normal normal medium 21px/37px Montserrat;
  letter-spacing: 0px;
  font-size: 40px;
  font-weight: 800;
  color: #112768;
}


.font-2xl-bold {
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  line-height: 32px;
  font-size: 24px;
}

.font-xl-bold {
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  line-height: 28px;
  font-size: 20px;
}

.font-lg-bold {
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  line-height: 23px;
  font-size: 18px;
}

.font-md-bold {
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  line-height: 24px;
  font-size: 16px;
}

.font-sm-bold {
  font-weight: 700 !important;
  font-family: "Montserrat", sans-serif !important;
  line-height: 18px !important;
  font-size: 14px !important;
}

.font-xs-bold {
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
  line-height: 18px;
  font-size: 12px;
}

.color-grey-900 {
  color: #071920 !important;
}

.color-success {
  color: #06D6A0;
}

.color-warning {
  color: #FFD166;
}

.color-danger {
  color: #EF476F;
}

.color-mutted {
  color: #CFDEE3;
}

.color-info {
  color: #28A7E6;
}

.color-white {
  color: #fff !important;
}

.section {
  display: inline-block;
  width: 100%;
}

.section-800 {
  display: inline-block;
  padding-top: 40px;
  padding-bottom: 40px;
  width: 100%;
  min-height: 800px;
}

.section-800 img {
  max-width: 100% !important;
}

.bg-1 {
  background-color: #EFE9FF !important;
}

.bg-2 {
  background-color: #FFEADE !important;
}

.bg-3 {
  background-color: #FDFFD4 !important;
}

.bg-4 {
  background-color: #D1ECF7 !important;
}

.bg-5 {
  background-color: #DFF9F3 !important;
}

.bg-7 {
  background-color: #FFEFD1 !important;
}

.bg-8 {
  background-color: #EBF5F8 !important;
}

.bg-10 {
  background-color: #B7DDEC !important;
}

.bg-11 {
  background-color: #E0F0FC !important;
}

a {
  color: #071920;
  text-decoration: none;
}

a:hover {
  color: #06D6A0;
}

 .mobile-logo {
    display: none !important;
  }

  .desktop-logo {
    display: block !important;
  }


  .breadcrumb {
    top: 35px;
    position: relative;
    padding: 8px 16px;
    background: #F3F4F4;
    border-radius: 5px;
  }
  .breadcrumb-list {
    list-style: none;
    display: flex;
    align-items: center;
    padding: 0;
    margin: 0;
  }
  .breadcrumb-item a {
    color: #112768;
    text-decoration: none;
  }
  .last {
    margin-right: 5px; /* Adjust spacing as necessary */
    color: #112768;
    font: normal normal 600 15px/37px Montserrat;
  }
  .breadcrumbs-separator {
    margin: 0 5px;
    color: #6c757d; /* Chevron color */
  }


@media (min-width: 1400px) {

  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    max-width: 1170px;
  }
}


.hover-up {
  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
}

.hover-up:hover {
  transform: translateY(-2px);
  transition: all 0.25s cubic-bezier(0.02, 0.01, 0.47, 1);
}

.bd-rd4 {
  border-radius: 4px;
}

.bd-rd8 {
  border-radius: 8px;
}

.bd-rd16 {
  border-radius: 16px;
}

.form-control {
  height: 54px;
  border-radius: 8px;
  color: #3D565F;
  border: 1px solid #CDE2E7;
  padding: 18px 20px;
}

.form-control:focus {
  border-color: #06D6A0;
}

.form-control::-moz-placeholder {
  color: #8EA4AC;
  font-size: 16px;
  line-height: 24px;
  opacity: 1;
}

.form-control::placeholder {
  color: #8EA4AC;
  font-size: 16px;
  line-height: 24px;
  opacity: 1;
}

.form-control:-ms-input-placeholder,
.form-control::-webkit-input-placeholder {
  color: #8EA4AC;
  font-size: 16px;
  line-height: 24px;
  opacity: 1;
}

.font-shippori {
  font-family: "shippori-mincho", sans-serif;
}

.table-responsive {
  max-width: 100%;
}

.font-84 {
  font-size: 84px !important;
  line-height: 84px !important;
}

.box-404 {
  padding: 150px 0px 0px 0px;
}

.font-bold-800 {
  font-weight: 800;
}

.box-pagination {
  display: inline-block;
}

.pagination {
  display: flex;
  padding-left: 0;
  list-style: none;
  margin-bottom: 20px;
}

.pagination li {
  padding: 2px;
}

.pagination li a {
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  color: #024430;
  border-radius: 4px;
  border: 1px solid #CDE2E7;
  min-width: 36px;
  text-align: center;
}

.pagination li .page-prev {
  background: url(../imgs/page/shop/prev.svg) no-repeat center;
  min-height: 37px;
  padding: 5px 20px;
  border: 0px;
}

.pagination li .page-next {
  background: url(../imgs/page/shop/next.svg) no-repeat center;
  min-height: 37px;
  padding: 5px 20px;
  border: 0px;
}

.pagination li a:hover,
.pagination li a.active {
  background-color: #024430;
  border-color: #024430;
  color: #CDE2E7;
}

.pagination li .page-next:hover {
  background-color: transparent;
}

.pagination li .page-prev:hover {
  background-color: transparent;
}

.rating img {
  width: 12px;
}

.box-count {
  text-align: left;
  margin: 0px 0px 20px 0px;
}

.box-count .deals-countdown {
  border-radius: 0px;
  display: flex;
  padding: 4px 0px;
  width: 100%;
  margin: auto;
  max-width: 100%;
}
/* ... */

